--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container">
             <a class="navbar-brand mx-auto" href="./index.html">
-                <img src="img/mlsea-logo-transparent.png" class="img-fluid" alt="logo">
+                <img src="img/mlsea-lego-transparent.png"  alt="logo">
             </a>
 
         </div>
@@ -71,7 +71,7 @@
                 <div class="col-md-6 offset-md-3">
                     <div class="input-group mb-3">
                         <input id="searchInput" type="search" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
-                        <button type="button" class="btn btn-outline-primary" data-mdb-ripple-init>Search</button>
+                        <button id="searchButton" type="button" class="btn btn-outline-primary" data-mdb-ripple-init>Search</button>
                     </div>
                 </div>
             </div>
@@ -178,6 +178,8 @@
     </div>
 </section>
 
+<div id="data"></div>
+
 <!-- Footer Section Start-->
 <br><br><br>
 <section id="footer" class="footer_wrapper mt-3 mt-md-0 pb-0">
@@ -201,6 +203,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
   <!-- Custom Js Link -->
+  <script src="js/queries.js"></script>
   <script src="js/index.js"></script>
 
 </body>
