--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@
                     </div>
                 </div>
             </div>
+            <div id="searchingSpan" style="display: none;" class="row">
+                <div  class="col-sm-12 section-title text-center mb-5">
+                    <span>Searching...</span>
+                </div>
+            </div>
             <br><br>
         </div>
         <!-- Search bar exit-->
@@ -174,6 +179,17 @@
             </div>
 
         </div>
+        <br><br><br><br><br><br>
+
+        <div id="resultsTitle" class="row">
+            
+        </div>
+        <br>
+
+        <div id="resultsContainer" class="row">
+            <!--Search results will appear here-->
+        </div>
+        <br><br>
 
     </div>
 </section>
