make card style

--- a/index.html
+++ b/index.html
@@ -186,8 +186,21 @@
         </div>
         <br>
 
-        <div id="resultsContainer" class="row">
+        <div id="resultsContainer" class="row justify-content-center">
             <!--Search results will appear here-->
+            <div class="col-12 col-sm-10 col-md-8 col-lg-7">
+                <a href="#" class="card-link">
+                    <div class="card border-info">
+                        <div class="row card-body text-info">
+                            <div class="col-9 cardTextDiv">
+                                <h5 class="card-title">Title</h5>
+                                <p class="card-text">Card text</p>
+                            </div>
+                            <img class="col-3" src="img/Kaggle_logo.png" alt="Hello"/>
+                        </div>
+                    </div>
+                </a>
+            </div>
         </div>
         <br><br>
 
