--- a/index.html
+++ b/index.html
@@ -189,25 +189,29 @@
         <div id="resultsContainer" class="row justify-content-center">
             <!--Search results will appear here-->
             <div class="col-12 col-sm-10 col-md-8 col-lg-7">
-                <a href="#" class="card-link">
-                    <div class="card border-info">
-                        <div class="row card-body text-info">
-                            <div class="col-9 cardTextDiv">
-                                <h5 class="card-title">Title</h5>
-                                <p class="card-text">Card text</p>
-                            </div>
-                            <img class="col-3" src="img/Kaggle_logo.png" alt="Hello"/>
+                <div class="card border-info">
+                    <div class="row card-body text-info">
+                        <div class="col-9 col-xl-10">
+                            <h5 class="card-title">gpu</h5>
+                            <p class="card-text">Card text</p>
+                        </div>
+                        <div class="col-3 col-xl-2 icon-container"> 
+                            <img src="img/Kaggle_logo.png" alt="Hello"/>
                         </div>
                     </div>
-                </a>
+                </div>
             </div>
+
+        </div>
+
+        <div id="moreButtonContainer" class="row justify-content-center"> 
+            <button class = "btn btn-outline-primary mt-3"> Show more</button>
         </div>
         <br><br>
 
     </div>
 </section>
 
-<div id="data"></div>
 
 <!-- Footer Section Start-->
 <br><br><br>
