--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
         <div id="resultsContainer" class="row justify-content-center">
             <!--Search results will appear here-->
-            <div class="col-12 col-sm-10 col-md-8 col-lg-7">
+            <!-- <div class="col-12 col-sm-10 col-md-8 col-lg-7">
                 <div class="card border-info">
                     <div class="row card-body text-info">
                         <div class="col-9 col-xl-10">
@@ -200,12 +200,12 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
         </div>
 
         <div id="moreButtonContainer" class="row justify-content-center"> 
-            <button class = "btn btn-outline-primary mt-3"> Show more</button>
+            <!-- <button class = "btn btn-outline-primary mt-3"> Show more</button> -->
         </div>
         <br><br>
 
