--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>MLSea: Discovery App</title>
 
   <!-- FAVICON -->
-  <link rel="icon" type="image/ico" href="img/mlsea-logo-transparent.ico">
+  <link rel="icon" type="image/ico" href="img/mlsea-logo-transparent.png">
 
   <!-- Bootstrap CSS -->
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
