--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>MLSea: Discovery App</title>
 
   <!-- FAVICON -->
-  <link rel="icon" type="image/ico" href="img/mlsea-logo-transparent.png">
+  <link rel="icon" type="image/png" href="img/mlsea-logo-transparent.png">
 
   <!-- Bootstrap CSS -->
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
@@ -26,7 +26,7 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container">
             <a class="navbar-brand mx-auto" href="./index.html">
-                <img src="img/mlsea-lego-transparent.png"  alt="logo">
+                <img src="img/mlsea-logo-transparent.png"  alt="logo">
             </a>
 
         </div>
