--- a/datasetInfo.html
+++ b/datasetInfo.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MLSea: Discovery App</title>
+  <title>MLSeascape</title>
 
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="img/mlsea-logo-transparent.png">
