publish publ template

--- a/publicationInfo.html
+++ b/publicationInfo.html
@@ -175,7 +175,7 @@
 
     <!-- Custom Js Link -->
     <script src="js/queries.js"></script>
-    <script src="js/algorithmInfo.js"></script>
+    <script src="js/publicationInfo.js"></script>
 
 </body>
 </html>
